--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,8 @@
 [pytest]
 pythonpath = .
-addopts = -p no:qt
+testpaths = tests oatgrass
+addopts = -p no:qt -v -m "not slow and not integration"
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests requiring API access
+    phase9: marks tests as Phase 9 fixture tests
